# RAGeval

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GAP_REPORT.md  README.md  SELF_HOSTING.md  api.py  docker-compose.dev.yml  pyproject.toml  render.yaml  requirements.txt  steps.md  test_eval.py  test_frontend.py  test_llm.py  test_regex.py  test_regex2.py  test_regex3.py  test_relevance.py
.github/workflows/: deploy.yml
core/: config.py  monitoring.py  performance.py
demo/: index.html
eval/: JUDGE_BENCHMARK.md  run_judge_benchmark.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/e2e/: all_pages.spec.ts  exhaustive_ui.spec.ts  rageval_telemetry.spec.ts
frontend/playwright-report/: index.html
frontend/public/: sw.js
frontend/src/: App.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Alerts.tsx  ApiDocs.tsx  BenchmarkPage.tsx  Cost.tsx  Evaluate.tsx  Experiments.tsx  Instrumentation.tsx  Models.tsx  Overview.tsx  Queries.tsx  Saved.tsx  Traces.tsx  UserGuidePage.tsx
frontend/src/theme/: tokens.css
frontend/test-results/: .last-run.json
frontend/test-results/exhaustive_ui-Exhaustive-U-14533--ApiDocs-pages-ApiDocs-tsx--chromium/: error-context.md
frontend/test-results/exhaustive_ui-Mobile-Low-B-0c13a-Service-Worker-registration-chromium/: error-context.md
frontend/test-results/exhaustive_ui-Mobile-Low-B-3ec90-ents-to-prevent-stale-cache-chromium/: error-context.md
frontend/test-results/rageval_telemetry-Phase-5--16c93--pages-render-without-crash-chromium/: error-context.md
rageval/: __init__.py  _compat.py  cli.py  decorator.py  evaluator.py  otel_exporter.py  store.py
src/rageval/: __init__.py  _compat.py  cli.py  dspy_integration.py  evaluator.py  otel_exporter.py
tests/: test_api.py  test_decorator.py  test_dspy_integration.py  test_e2e.py  test_evaluator.py  test_exhaustive_api.py  test_live_judges.py  test_otel_exporter.py  test_rageval_pkg.py  test_real_data_apis.py  test_smoke.py  test_store.py
