[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rageval"
version = "0.1.0"
description = "Drop-in LLMOps observability. Self-hosted. SQLite-default. Persona-aware. Multi-judge consensus."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Yacine"}]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "litellm>=1.55.0",
    "anthropic>=0.40.0",
    "groq>=0.11.0",
    "openai>=1.55.0",
    "sentence-transformers>=3.1.1",
    "scikit-learn>=1.5.2",
    "numpy>=2.1.3",
    "python-dotenv>=1.0.1",
]

[project.scripts]
rageval = "rageval.cli:main"

[tool.setuptools]
packages = ["rageval"]
