[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name (the bare "rageval" is blocked as too-similar to an existing project).
# The Python import name stays `rageval` (e.g. `pip install omnismart-rageval` -> `import rageval`).
name = "omnismart-rageval"
version = "0.1.6"
description = "Drop-in LLMOps observability. Self-hosted. SQLite-default. Persona-aware. Multi-judge consensus."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Yacine"}]
# Core install is light (logging/metrics/tracking work with the stdlib + dotenv). Heavy/LLM deps
# live in extras so the package installs fast on any machine:
#   pip install omnismart-rageval            # observability core (store, track, metrics)
#   pip install "omnismart-rageval[eval]"    # + multi-judge scoring & embeddings
#   pip install "omnismart-rageval[server]"  # + run the bundled API (`rageval serve`)
#   pip install "omnismart-rageval[all]"
dependencies = [
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
eval = [
    "litellm>=1.55.0",
    "anthropic>=0.40.0",
    "groq>=0.11.0",
    "openai>=1.55.0",
    "sentence-transformers>=3.1.1",
    "scikit-learn>=1.5.2",
    "numpy>=2.1.3",
]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]
all = [
    "litellm>=1.55.0", "anthropic>=0.40.0", "groq>=0.11.0", "openai>=1.55.0",
    "sentence-transformers>=3.1.1", "scikit-learn>=1.5.2", "numpy>=2.1.3",
    "fastapi>=0.115.0", "uvicorn[standard]>=0.32.0",
]

[project.scripts]
rageval = "rageval.cli:main"

[tool.setuptools]
packages = ["rageval"]
